// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the children inside it 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <div
        className="o-header__top"
      >
        <div
          className="o-header__top-wrapper"
        >
          <Logo
            className="o-header__logo"
          />
          <span
            className="o-nav u-hidden-d"
          >
            <Connect(NavBar) />
          </span>
          <React.Fragment>
            <div
              className="c-header__account"
            >
              <div
                className="c-header__account-button"
              >
                <div
                  className="c-header__account-label"
                >
                  <Link
                    as="/account/myaccount"
                    href="/account/login"
                  >
                    <a
                      className="o-header__myaccount"
                    >
                      Account
                    </a>
                  </Link>
                </div>
              </div>
            </div>
            <div
              className="c-header__account"
            />
          </React.Fragment>
          <Connect(MiniBag) />
          <span
            className="c-header__search"
          >
            <Connect(SearchBar) />
          </span>
        </div>
      </div>
      <span
        className="o-nav u-visible-d"
      >
        <Connect(NavBar) />
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  >
    Content
  </div>
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;

exports[`renders the footer 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <div
        className="o-header__top"
      >
        <div
          className="o-header__top-wrapper"
        >
          <Logo
            className="o-header__logo"
          />
          <span
            className="o-nav u-hidden-d"
          >
            <Connect(NavBar) />
          </span>
          <React.Fragment>
            <div
              className="c-header__account"
            >
              <div
                className="c-header__account-button"
              >
                <div
                  className="c-header__account-label"
                >
                  <Link
                    as="/account/myaccount"
                    href="/account/login"
                  >
                    <a
                      className="o-header__myaccount"
                    >
                      Account
                    </a>
                  </Link>
                </div>
              </div>
            </div>
            <div
              className="c-header__account"
            />
          </React.Fragment>
          <Connect(MiniBag) />
          <span
            className="c-header__search"
          >
            <Connect(SearchBar) />
          </span>
        </div>
      </div>
      <span
        className="o-nav u-visible-d"
      >
        <Connect(NavBar) />
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;

exports[`renders the header 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <div
        className="o-header__top"
      >
        <div
          className="o-header__top-wrapper"
        >
          <Logo
            className="o-header__logo"
          />
          <span
            className="o-nav u-hidden-d"
          >
            <Connect(NavBar) />
          </span>
          <React.Fragment>
            <div
              className="c-header__account"
            >
              <div
                className="c-header__account-button"
              >
                <div
                  className="c-header__account-label"
                >
                  <Link
                    as="/account/myaccount"
                    href="/account/login"
                  >
                    <a
                      className="o-header__myaccount"
                    >
                      Account
                    </a>
                  </Link>
                </div>
              </div>
            </div>
            <div
              className="c-header__account"
            />
          </React.Fragment>
          <Connect(MiniBag) />
          <span
            className="c-header__search"
          >
            <Connect(SearchBar) />
          </span>
        </div>
      </div>
      <span
        className="o-nav u-visible-d"
      >
        <Connect(NavBar) />
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;

exports[`renders the navbar 1`] = `
<React.Fragment>
  <React.Fragment>
    <CustomHead />
    <div
      className="o-header"
    >
      <div
        className="o-header__top"
      >
        <div
          className="o-header__top-wrapper"
        >
          <Logo
            className="o-header__logo"
          />
          <span
            className="o-nav u-hidden-d"
          >
            <Connect(NavBar) />
          </span>
          <React.Fragment>
            <div
              className="c-header__account"
            >
              <div
                className="c-header__account-button"
              >
                <div
                  className="c-header__account-label"
                >
                  <Link
                    as="/account/myaccount"
                    href="/account/login"
                  >
                    <a
                      className="o-header__myaccount"
                    >
                      Account
                    </a>
                  </Link>
                </div>
              </div>
            </div>
            <div
              className="c-header__account"
            />
          </React.Fragment>
          <Connect(MiniBag) />
          <span
            className="c-header__search"
          >
            <Connect(SearchBar) />
          </span>
        </div>
      </div>
      <span
        className="o-nav u-visible-d"
      >
        <Connect(NavBar) />
      </span>
    </div>
  </React.Fragment>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</React.Fragment>
`;
